fixed misalignment in sniplet sources

--- a/css/modules/_pages.scss
+++ b/css/modules/_pages.scss
@@ -66,7 +66,7 @@
             height: 100%;
             position: absolute;
             width: 100%;
-            min-height: 200px;
+            min-height: 160px;
             display: flex;
             flex-direction: column;
             align-items: center;
